# SlimTracinCpp

./: CMakeLists.txt  README.md
src/: bmp2texture.cpp  obj2mesh.cpp  slim.h
src/examples/: 01_Lights.cpp  01_Lights.cu  02_Geometry.cpp  02_Geometry.cu  03_BlinnPhong.cpp  03_BlinnPhong.cu  04_GlassMirror.cpp  04_GlassMirror.cu  05_PBR.cpp  05_PBR.cu  06_AreaLights.cpp  06_AreaLights.cu  07_Meshes.cpp  07_Meshes.cu  08_Modes.cpp  08_Modes.cu  09_Textures.cpp  09_Textures.cu  bolonga_irradiance.texture  cathedral_irradiance.texture  cube.mesh  monkey.mesh  suzanne.mesh  textures.h
src/slim/core/: base.h  hud.h  ray.h  string.h  texture.h  transform.h
src/slim/draw/: bvh.h  canvas.h  quad.h  scene.h  selection.h  sphere.h  ssb.h  tet.h
src/slim/math/: quat.h  utils.h  vec2.h  vec3.h
src/slim/renderer/: SSB.h  common.h  mesh_tracer.h  ray_tracer.h  raytracer.h  raytracer_kernel.h  renderer.h  renderer_GPU.h  scene_tracer.h  shaded.h  surface_shader.h  trace.h
src/slim/renderer/closest_hit/: classic.h  debug.h  lights.h  reflection.h  surface.h
src/slim/renderer/intersection/: box.h  geometry.h  mesh.h  quad.h  sphere.h  tetrahedra.h
src/slim/renderer/shaders/: light_shader.h  surface_shader.h
src/slim/renderer/tracers/: mesh.h  mesh_tracer.h  ray_tracer.h  scene.h  scene_tracer.h
src/slim/scene/: bvh_builder.h  camera.h  material.h  mesh.h  quad.h  scene.h  scene_tracer.h  selection.h  tet.h
src/slim/serialization/: mesh.h  texture.h
src/slim/viewport/: frustum.h
